[gd_scene load_steps=3 format=3 uid="uid://2t56abso7by2"]

[ext_resource type="Script" path="res://src/gameplay/enemy_explosion.gd" id="1_txuik"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mn1wb"]
radius = 69.1158

[node name="EnemyExplosion" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_txuik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mn1wb")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_timer_timeout"]
